--- a/pages/kat_podshipniki.html
+++ b/pages/kat_podshipniki.html
@@ -60,36 +60,48 @@
             </div>
             <div class="section_products_podship">
                 <div class="post_poshipniki">
-                    <a href="">
-                        <img src="../resources/img/podship_skf.png"/>
-                        <h3>Подшипник SKF и NTN</h3>
-                        <p>7x19x6мм</p>
-                        <h3>608 ₽ / шт</h3>
-                    </a>
+                    <div class="izb_wrapper">
+                        <img src="../resources/img/izbrannoe.png" id="but_izb" alt="В избранное"/>
+                    </div>
+                    <div class="product_image">
+                        <img src="../resources/img/podship_skf.png" alt="Подшипник SKF"/>
+                    </div>
+                    <h3 id="post_name">Подшипник SKF и NTN</h3>
+                    <p>7x19x6мм</p>
+                    <h3>608 ₽ / шт</h3>
                 </div>
                 <div class="post_poshipniki">
-                    <a href="">
-                        <img src=""/>
-                        <h3>Подшипник SKF и NTN</h3>
-                        <p>7x19x6мм</p>
-                        <h3>608 ₽ / шт</h3>
-                    </a>
+                    <div class="izb_wrapper">
+                        <img src="../resources/img/izbrannoe.png" id="but_izb" alt="В избранное"/>
+                    </div>
+                    <div class="product_image">
+                        <img src="../resources/img/podship_skf.png" alt="Подшипник SKF"/>
+                    </div>
+                    <h3 id="post_name">Подшипник SKF и NTN</h3>
+                    <p>7x19x6мм</p>
+                    <h3>608 ₽ / шт</h3>
                 </div>
                 <div class="post_poshipniki">
-                    <a href="">
-                        <img src=""/>
-                        <h3>Подшипник SKF и NTN</h3>
-                        <p>7x19x6мм</p>
-                        <h3>608 ₽ / шт</h3>
-                    </a>
+                    <div class="izb_wrapper">
+                        <img src="../resources/img/izbrannoe.png" id="but_izb" alt="В избранное"/>
+                    </div>
+                    <div class="product_image">
+                        <img src="../resources/img/podship_skf.png" alt="Подшипник SKF"/>
+                    </div>
+                    <h3 id="post_name">Подшипник SKF и NTN</h3>
+                    <p>7x19x6мм</p>
+                    <h3>608 ₽ / шт</h3>
                 </div>
                 <div class="post_poshipniki">
-                    <a href="">
-                        <img src=""/>
-                        <h3>Подшипник SKF и NTN</h3>
-                        <p>7x19x6мм</p>
-                        <h3>608 ₽ / шт</h3>
-                    </a>
+                    <div class="izb_wrapper">
+                        <img src="../resources/img/izbrannoe.png" id="but_izb" alt="В избранное"/>
+                    </div>
+                    <div class="product_image">
+                        <img src="../resources/img/podship_skf.png" alt="Подшипник SKF"/>
+                    </div>
+                    <h3 id="post_name">Подшипник SKF и NTN</h3>
+                    <p>7x19x6мм</p>
+                    <h3>608 ₽ / шт</h3>
                 </div>
             </div>
 
